# zombie

./: .gitignore  LICENSE  README.md  meson.build
include/: memory.h  test.h
src/: memory.c  test.c  zombie0.c  zombie1.c  zombie2.c  zombie3.c
